sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:10: error: not found: value j
    echange(i,j)
              ^